2007-04-17 Don Scorgie <Don@Scorgie.org>

	* src/TextThought.py:
	Fix thought boundaries when using attributes
	Don't process (control) key presses when not editing


2007-04-06 Don Scorgie <Don@Scorgie.org>

	* src/MMapArea.py:
	* src/Links.py:
	Add key filtering for +/- keys to increase / decrease
	link strength (when selected)

	* src/MMapArea.py:
	* src/Links.py:
	* src/BaseThought.py:
	First pass at link selection
	Able to select links (with think rectangle drawn around them)
	BaseThought and MMapArea have minor modifications to support
	Link selection

	* src/TextThought.py:
	Update attributes properly when using the mouse
	to move the cursor

2007-04-06 Don Scorgie <Don@Scorgie.org>

	Merge of Windows-support branch:
	* Windows/COPYING.txt:
	* Windows/defs.py:
	* Windows/lab.iss:
	* Windows/labyrinth.lnk:
	* Windows/labyrinth.bat:
	* Windows/labyrinth.ico:
	* Windows/WinSetup.bat:
	* Windows/winsetup.py:
	Add files for Windows build

	* src/Browser.py:
	* src/labyrinth.py:
	* src/MainWindow.py:
	* src/TextThought.py:
	* src/utils.py:
	Various fixes required to build and run on Windows properly


2007-04-05 Don Scorgie <Don@Scorgie.org>

	* src/TextThought.py:
	Fix stupid bug to make text selection work


2007-04-05 Don Scorgie <Don@Scorgie.org>

	* src/MainWindow.py:
	* src/MMapArea.py:
	* src/TextThought.py:
	* src/TextBufferMarkup.py:
	Add support for italics and underline
	
	* doc/TheFuture:
	Rework goals for 0.4 release


2007-04-05 Don Scorgie <Don@Scorgie.org>

	* src/MMapArea.py:
	Only update cursor type when the type has changes
	(Patch from Kamila Chyla)

2007-04-05 Don Scorgie <Don@Scorgie.org>

	* AUTHORS:
	* doc/TheFuture:
	Minor updates (correct email, add tick)
	
	* src/TextBufferMarkup.py:
	Total rewrite from scratch.  The old one wasn't as shiny
	and didn't really do what I wanted
	New one is smaller and does what is needed
	Add support for enboldening and framework for other
	text attributes
	
	* src/DrawingThought.py: